Highlight class added

--- a/frontend/themes/vaadin/navigation.css
+++ b/frontend/themes/vaadin/navigation.css
@@ -1,24 +1,13 @@
-[slot='drawer'] {
-  background-image: linear-gradient(0deg, var(--lumo-shade-5pct), var(--lumo-shade-5pct));
-}
-
 [slot='drawer'] nav a {
   text-decoration: none;
   transition: color 140ms;
 }
 
-[slot='drawer'] nav a .la {
-  margin-top: calc(var(--lumo-space-xs) * 0.5);
-}
-
 [slot='drawer'] nav a::before {
   border-radius: var(--lumo-border-radius);
-  bottom: calc(var(--lumo-space-xs) * 0.5);
   content: '';
-  left: 0;
+  inset: calc(var(--lumo-space-xs) * 0.5) 0;
   position: absolute;
-  right: 0;
-  top: calc(var(--lumo-space-xs) * 0.5);
   transition: background-color 140ms;
 }
 
@@ -30,40 +19,30 @@
   background-color: var(--lumo-primary-color-10pct);
 }
 
-[slot='drawer'] footer vaadin-context-menu {
-  align-items: center;
-  display: flex;
-}
-
 .menu-item-link {
+  align-items: center;
+  color: var(--lumo-secondary-text-color);
   display: flex;
-  margin-left: var(--lumo-space-s);
-  margin-right: var(--lumo-space-s);
+  gap: var(--lumo-space-s);
+  margin: 0 var(--lumo-space-s);
   padding: var(--lumo-space-s);
   position: relative;
-  color: var(--lumo-secondary-text-color);
 }
 
 .menu-item-text {
-  font-weight: 500;
   font-size: var(--lumo-font-size-s);
-}
-
-.menu-item-icon {
-  margin-inline-end: var(--lumo-space-s);
-  font-size: var(--lumo-font-size-l);
+  font-weight: 500;
 }
 
 .view-title {
-  margin: 0;
   font-size: var(--lumo-font-size-l);
+  margin: 0;
 }
 
 .view-header {
   align-items: center;
   background-color: var(--lumo-base-color);
-  border-bottom: 1px solid;
-  border-color: var(--lumo-contrast-10pct);
+  border-bottom: 1px solid var(--lumo-contrast-10pct);
   box-sizing: border-box;
   display: flex;
   height: var(--lumo-size-xl);
@@ -77,11 +56,10 @@
 .app-name {
   align-items: center;
   display: flex;
+  font-size: var(--lumo-font-size-m);
   height: var(--lumo-size-xl);
   margin: 0;
-  padding-left: var(--lumo-space-m);
-  padding-right: var(--lumo-space-m);
-  font-size: var(--lumo-font-size-m);
+  padding: 0 var(--lumo-space-m);
 }
 
 .drawer-section {
@@ -93,8 +71,7 @@
 }
 
 .menu-item-container {
-  border-bottom: 1px solid;
-  border-color: var(--lumo-contrast-10pct);
+  border-bottom: 1px solid var(--lumo-contrast-10pct);
   flex-grow: 1;
   overflow: auto;
 }
@@ -103,15 +80,4 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
-}
-
-.footer {
-  align-items: center;
-  display: flex;
-  margin-bottom: var(--lumo-space-s);
-  margin-top: var(--lumo-space-s);
-  padding-left: var(--lumo-space-m);
-  padding-right: var(--lumo-space-m);
-  padding-bottom: var(--lumo-space-xs);
-  padding-top: var(--lumo-space-xs);
 }
