--- a/frontend/themes/vaadin/styles.css
+++ b/frontend/themes/vaadin/styles.css
@@ -1,2 +1,4 @@
-@import url('./main-layout.css');
+@import url('./components/breadcrumb.css');
+@import url('./components/key-value-pairs.css');
+@import url('./navigation.css');
 @import url('line-awesome/dist/line-awesome/css/line-awesome.min.css');
