--- a/frontend/themes/vaadin/styles.css
+++ b/frontend/themes/vaadin/styles.css
@@ -1,4 +1,5 @@
 @import url('./components/breadcrumb.css');
+@import url('./components/highlights.css');
 @import url('./components/key-value-pairs.css');
 @import url('./navigation.css');
 @import url('line-awesome/dist/line-awesome/css/line-awesome.min.css');
