--- a/frontend/themes/vaadin/components/list.css
+++ b/frontend/themes/vaadin/components/list.css
@@ -1,8 +1,17 @@
 ul[theme~="border"] {
+    background-color: var(--lumo-base);
     background-image: linear-gradient(var(--lumo-contrast-5pct), var(--lumo-contrast-5pct));
     gap: 1px;
 }
 
-ul[theme~="border"] > * {
-    border-radius: 0;
+li.timeline::before {
+    background-color: var(--lumo-contrast-10pct);
+    content: "";
+    inset: 0 auto 0 calc(var(--lumo-space-m) + (var(--lumo-size-m) / 2));
+    position: absolute;
+    width: 1px;
+}
+
+li.timeline > * {
+    z-index: 0;
 }
