--- a/frontend/themes/vaadin/styles.css
+++ b/frontend/themes/vaadin/styles.css
@@ -2,6 +2,7 @@
 @import url('./components/highlights.css');
 @import url('./components/key-value-pairs.css');
 @import url('./components/list.css');
-@import url('./navigation.css');
+@import url('./border-radius.css');
 @import url('./line-clamp.css');
+@import url('./navigation.css');
 @import url('line-awesome/dist/line-awesome/css/line-awesome.min.css');
