--- a/frontend/themes/vaadin/components/key-value-pairs.css
+++ b/frontend/themes/vaadin/components/key-value-pairs.css
@@ -1,4 +1,4 @@
-dl[theme~="border"] {
+dl[theme~="dividers"] {
     background-color: var(--lumo-base);
     background-image: linear-gradient(var(--lumo-contrast-5pct), var(--lumo-contrast-5pct));
     gap: 1px;
