--- a/frontend/themes/vaadin/styles.css
+++ b/frontend/themes/vaadin/styles.css
@@ -1,3 +1,4 @@
+@import url('./components/alert.css');
 @import url('./components/breadcrumb.css');
 @import url('./components/highlights.css');
 @import url('./components/key-value-pairs.css');
