--- a/frontend/themes/vaadin/components/vaadin-radio-button.css
+++ b/frontend/themes/vaadin/components/vaadin-radio-button.css
@@ -1,14 +1,14 @@
-/* Right-align */
+/* Align: Right */
 
-:host([theme~="right-align"]) .vaadin-radio-button-container {
+:host([theme~="align-right"]) .vaadin-radio-button-container {
     grid-template-columns: 1fr auto;
 }
 
-:host([theme~="right-align"]) .vaadin-radio-button-wrapper {
+:host([theme~="align-right"]) .vaadin-radio-button-wrapper {
     order: 1;
 }
 
-:host([theme~="right-align"][has-label]) ::slotted(label) {
+:host([theme~="align-right"][has-label]) ::slotted(label) {
     padding-inline-start: 0;
 }
 
