--- a/frontend/themes/vaadin/styles.css
+++ b/frontend/themes/vaadin/styles.css
@@ -1,6 +1,7 @@
 @import url('./components/alert.css');
 @import url('./components/breadcrumb.css');
 @import url('./components/highlights.css');
+@import url('./components/input-group.css');
 @import url('./components/key-value-pairs.css');
 @import url('./components/list.css');
 @import url('./border-radius.css');
