--- a/frontend/themes/vaadin/components/input-group.css
+++ b/frontend/themes/vaadin/components/input-group.css
@@ -4,24 +4,24 @@
 
 /* Horizontal */
 
-.input-group:not(.flex-col) > *:first-child::part(input-field),
-.input-group:not(.flex-col) > vaadin-button:first-child {
+.input-group.flex-row > *:first-child::part(input-field),
+.input-group.flex-row > vaadin-button:first-child {
     border-end-end-radius: 0;
     border-start-end-radius: 0;
 }
 
-.input-group:not(.flex-col) > *:not(:first-child):not(:last-child)::part(input-field),
-.input-group:not(.flex-col) > vaadin-button:not(:first-child):not(:last-child) {
+.input-group.flex-row > *:not(:first-child):not(:last-child)::part(input-field),
+.input-group.flex-row > vaadin-button:not(:first-child):not(:last-child) {
     border-radius: 0;
 }
 
-.input-group:not(.flex-col) > *:last-child::part(input-field),
-.input-group:not(.flex-col) > vaadin-button:last-child {
+.input-group.flex-row > *:last-child::part(input-field),
+.input-group.flex-row > vaadin-button:last-child {
     border-end-start-radius: 0;
     border-start-start-radius: 0;
 }
 
-.input-group:not(.flex-col) > [theme~="outline"] + [theme~="outline"] {
+.input-group.flex-row > [theme~="outline"] + [theme~="outline"] {
     margin-inline-start: -1px;
 }
 
@@ -30,7 +30,7 @@
 .input-group.flex-col > *:first-child::part(input-field),
 .input-group.flex-col > vaadin-button:first-child {
     border-end-end-radius: 0;
-    border-end-start-radius: 0px;
+    border-end-start-radius: 0;
 }
 
 .input-group.flex-col > *:not(:first-child):not(:last-child)::part(input-field),
@@ -84,11 +84,22 @@
     padding-top: 0;
 }
 
-.input-group.flex-col > [theme~="outline"] + [theme~="outline"] {
+.input-group.flex-col > [theme~="outline"] + [theme~="outline"],
+.input-group.flex-col > [theme~="outline"] + .input-group {
     margin-top: -1px;
 }
 
 /* Nested groups */
+
+.input-group.flex-col > .input-group.flex-row > *:first-child::part(input-field),
+.input-group.flex-col > .input-group.flex-row > vaadin-button:first-child {
+    border-start-start-radius: 0;
+}
+
+.input-group.flex-col > .input-group.flex-row > *:last-child::part(input-field),
+.input-group.flex-col > .input-group.flex-row > vaadin-button:last-child {
+    border-start-end-radius: 0;
+}
 
 .input-group.flex-col .input-group:first-child > vaadin-combo-box,
 .input-group.flex-col .input-group:first-child > vaadin-date-picker,
