--- a/frontend/themes/vaadin+/components/input-field.css
+++ b/frontend/themes/vaadin+/components/input-field.css
@@ -25,12 +25,38 @@
 
 /* Theme: Outline */
 
+:host([theme~='outline']) {
+    --vaadin-input-field-border-color: var(--lumo-contrast-50pct);
+    --vaadin-input-field-border-width: 1px;
+}
+
+:host([theme~="outline"][disabled]) {
+    --vaadin-input-field-border-color: var(--lumo-contrast-10pct);
+}
+
+:host([theme~="outline"][invalid]) {
+    --vaadin-input-field-border-color: var(--lumo-error-color-50pct);
+}
+
+:host([theme~="outline"][readonly]) {
+    --vaadin-input-field-border-color: transparent;
+    --vaadin-input-field-border-width: 0;
+}
+
+:host([theme~='outline'][focus-ring]) {
+    --vaadin-input-field-border-color: var(--lumo-primary-color);
+}
+
 :host([theme~='outline'][focus-ring]) [part='input-field'] {
-    box-shadow: 0 0 0 2px var(--lumo-primary-color-50pct), inset 0 0 0 1px var(--lumo-primary-color);
+    box-shadow: 0 0 0 2px var(--lumo-primary-color-50pct), inset 0 0 0 var(--vaadin-input-field-border-width, 0) var(--vaadin-input-field-border-color);
+}
+
+:host([theme~='outline'][invalid][focus-ring]) {
+    --vaadin-input-field-border-color: var(--lumo-error-color);
 }
 
 :host([theme~='outline'][invalid][focus-ring]) [part='input-field'] {
-    box-shadow: 0 0 0 2px var(--lumo-error-color-50pct), inset 0 0 0 1px var(--lumo-error-color);
+    box-shadow: 0 0 0 2px var(--lumo-error-color-50pct), inset 0 0 0 var(--vaadin-input-field-border-width, 0) var(--vaadin-input-field-border-color);
 }
 
 /* Theme: Inset Label */
