--- a/frontend/themes/vaadin+/styles.css
+++ b/frontend/themes/vaadin+/styles.css
@@ -6,5 +6,4 @@
 @import url('./components/list.css');
 @import url('./border-radius.css');
 @import url('./line-clamp.css');
-@import url('./navigation.css');
-@import url('line-awesome/dist/line-awesome/css/line-awesome.min.css');
+@import url('./main-layout.css');
