--- a/frontend/themes/vaadin+/components/key-value-pairs.css
+++ b/frontend/themes/vaadin+/components/key-value-pairs.css
@@ -1,7 +1,9 @@
-dl[theme~="dividers"] {
-    background-color: var(--lumo-base);
-    background-image: linear-gradient(var(--lumo-contrast-5pct), var(--lumo-contrast-5pct));
-    gap: 1px;
+dl[theme~="dividers"] > *:not(:last-child)::after {
+    border-bottom: 1px solid var(--lumo-contrast-10pct);
+    content: "";
+    inset: auto 0 0 0;
+    pointer-events: none;
+    position: absolute;
 }
 
 dl[theme~="stripes"] > *:nth-child(odd) {
