--- a/frontend/themes/vaadin+/components/vaadin-checkbox.css
+++ b/frontend/themes/vaadin+/components/vaadin-checkbox.css
@@ -1,3 +1,17 @@
+/* Dividers */
+
+:host([theme~="dividers"]) {
+    position: relative;
+}
+
+:host([theme~="dividers"]:not(:last-of-type))::after {
+    border-bottom: 1px solid var(--lumo-contrast-10pct);
+    content: "";
+    inset: auto 0 0 0;
+    pointer-events: none;
+    position: absolute;
+}
+
 /* Align: Right */
 
 :host([theme~="align-right"]) .vaadin-checkbox-container {
