--- a/frontend/themes/vaadin+/components/vaadin-radio-group.css
+++ b/frontend/themes/vaadin+/components/vaadin-radio-group.css
@@ -2,8 +2,12 @@
 
 /* Dividers */
 
-:host([theme~='vertical'][theme~="dividers"]) [part='group-field'] ::slotted(*:not(:last-of-type)) {
+:host([theme~='vertical'][theme~="dividers"]) ::slotted(vaadin-radio-button:not(:last-child)::after) {
     border-bottom: 1px solid var(--lumo-contrast-10pct);
+    content: "";
+    inset: auto 0 0 0;
+    pointer-events: none;
+    position: absolute;
 }
 
 /* Border */
