--- a/frontend/themes/vaadin+/components/input-field.css
+++ b/frontend/themes/vaadin+/components/input-field.css
@@ -1,3 +1,8 @@
+/* LineAwesome */
+:host ::slotted(span) {
+    --_size: var(--lumo-icon-size-s) !important;
+}
+
 /* Theme: Hide Label */
 
 :host([theme~="hide-label"][has-label]) {
