--- a/frontend/themes/vaadin+/styles.css
+++ b/frontend/themes/vaadin+/styles.css
@@ -4,6 +4,7 @@
 @import url('./components/key-value-pairs.css');
 @import url('./components/list.css');
 @import url('./components/stepper.css');
+@import url('./border.css');
 @import url('./border-radius.css');
 @import url('./line-clamp.css');
 @import url('./main-layout.css');
