--- a/frontend/themes/vaadin+/styles.css
+++ b/frontend/themes/vaadin+/styles.css
@@ -8,3 +8,5 @@
 @import url('./border-radius.css');
 @import url('./line-clamp.css');
 @import url('./main-layout.css');
+@import url('./position.css');
+@import url('./z-index.css');
