--- a/frontend/themes/vaadin+/components/vaadin-radio-group.css
+++ b/frontend/themes/vaadin+/components/vaadin-radio-group.css
@@ -1,6 +1,6 @@
 @import "input-field.css";
 
-/* Dividers */
+/* Theme: Dividers */
 
 :host([theme~='vertical'][theme~="dividers"]) ::slotted(vaadin-radio-button:not(:last-child)::after) {
     border-bottom: 1px solid var(--lumo-contrast-10pct);
@@ -10,28 +10,56 @@
     position: absolute;
 }
 
-/* Border */
+/* Theme: Border */
 
-:host([theme*='border']) [part='group-field'] ::slotted(*:first-of-type) {
+:host([theme*='border']:not([theme~='gap'])) [part='group-field'] ::slotted(*:first-of-type) {
     border-radius: var(--lumo-border-radius-m) 0 0 var(--lumo-border-radius-m);
 }
 
-:host([theme*='border']) [part='group-field'] ::slotted(*:last-of-type) {
+:host([theme*='border']:not([theme~='gap'])) [part='group-field'] ::slotted(*:last-of-type) {
     border-radius: 0 var(--lumo-border-radius-m) var(--lumo-border-radius-m) 0;
 }
 
-:host([theme*='border']) [part='group-field'] ::slotted(*:not(:first-of-type)) {
+:host([theme*='border']:not([theme~='gap'])) [part='group-field'] ::slotted(*:not(:first-of-type)) {
     margin: 0 0 0 -1px;
 }
 
-:host([theme*='border'][theme~='vertical']) [part='group-field'] ::slotted(*:first-of-type) {
+:host([theme*='border'][theme~='vertical']:not([theme~='gap'])) [part='group-field'] ::slotted(*:first-of-type) {
     border-radius: var(--lumo-border-radius-m) var(--lumo-border-radius-m) 0 0;
 }
 
-:host([theme*='border'][theme~='vertical']) [part='group-field'] ::slotted(*:last-of-type) {
+:host([theme*='border'][theme~='vertical']:not([theme~='gap'])) [part='group-field'] ::slotted(*:last-of-type) {
     border-radius: 0 0 var(--lumo-border-radius-m) var(--lumo-border-radius-m);
 }
 
-:host([theme*='border'][theme~='vertical']) [part='group-field'] ::slotted(*:not(:first-of-type)) {
+:host([theme*='border'][theme~='vertical']:not([theme~='gap'])) [part='group-field'] ::slotted(*:not(:first-of-type)) {
     margin: -1px 0 0 0;
+}
+
+/* Theme: Equal Width */
+
+:host([theme~='equal-width']) [part='group-field'] {
+    display: flex;
+}
+
+:host([theme~='equal-width']) [part='group-field'] ::slotted(*) {
+    flex: 1;
+}
+
+/* Theme: Gap */
+
+:host([theme~='gap']) [part='group-field'] {
+    display: flex;
+    flex-direction: column;
+    gap: var(--lumo-space-s);
+}
+
+:host([theme~='gap']) [part='group-field'] ::slotted(*) {
+    border-radius: var(--lumo-border-radius-m);
+}
+
+@media (min-width: 640px) {
+    :host([theme~='gap']) [part='group-field'] {
+        flex-direction: row;
+    }
 }
