--- a/frontend/themes/vaadin+/styles.css
+++ b/frontend/themes/vaadin+/styles.css
@@ -6,6 +6,7 @@
 @import url('./components/stepper.css');
 @import url('./border.css');
 @import url('./border-radius.css');
+@import url('./layout.css');
 @import url('./line-clamp.css');
 @import url('./main-layout.css');
 @import url('./position.css');
