--- a/frontend/themes/vaadin+/components/vaadin-radio-group.css
+++ b/frontend/themes/vaadin+/components/vaadin-radio-group.css
@@ -10,29 +10,40 @@
     position: absolute;
 }
 
-/* Theme: Border */
+/* Theme: Border & Toggle */
 
-:host([theme*='border']:not([theme~='gap'])) [part='group-field'] ::slotted(*:first-of-type) {
+:host([theme~="border"])::before,
+:host([theme~="toggle"])::before{
+    height: var(--lumo-size-m);
+}
+
+:host([theme~='border']:not([theme~='gap'])) [part='group-field'] ::slotted(*:first-of-type),
+:host([theme~='toggle']:not([theme~='gap'])) [part='group-field'] ::slotted(*:first-of-type) {
     border-radius: var(--lumo-border-radius-m) 0 0 var(--lumo-border-radius-m);
 }
 
-:host([theme*='border']:not([theme~='gap'])) [part='group-field'] ::slotted(*:last-of-type) {
+:host([theme~='border']:not([theme~='gap'])) [part='group-field'] ::slotted(*:last-of-type),
+:host([theme~='toggle']:not([theme~='gap'])) [part='group-field'] ::slotted(*:last-of-type) {
     border-radius: 0 var(--lumo-border-radius-m) var(--lumo-border-radius-m) 0;
 }
 
-:host([theme*='border']:not([theme~='gap'])) [part='group-field'] ::slotted(*:not(:first-of-type)) {
+:host([theme~='border']:not([theme~='gap'])) [part='group-field'] ::slotted(*:not(:first-of-type)),
+:host([theme~='toggle']:not([theme~='gap'])) [part='group-field'] ::slotted(*:not(:first-of-type)) {
     margin: 0 0 0 -1px;
 }
 
-:host([theme*='border'][theme~='vertical']:not([theme~='gap'])) [part='group-field'] ::slotted(*:first-of-type) {
+:host([theme~='border'][theme~='vertical']:not([theme~='gap'])) [part='group-field'] ::slotted(*:first-of-type),
+:host([theme~='toggle'][theme~='vertical']:not([theme~='gap'])) [part='group-field'] ::slotted(*:first-of-type) {
     border-radius: var(--lumo-border-radius-m) var(--lumo-border-radius-m) 0 0;
 }
 
-:host([theme*='border'][theme~='vertical']:not([theme~='gap'])) [part='group-field'] ::slotted(*:last-of-type) {
+:host([theme~='border'][theme~='vertical']:not([theme~='gap'])) [part='group-field'] ::slotted(*:last-of-type),
+:host([theme~='toggle'][theme~='vertical']:not([theme~='gap'])) [part='group-field'] ::slotted(*:last-of-type) {
     border-radius: 0 0 var(--lumo-border-radius-m) var(--lumo-border-radius-m);
 }
 
-:host([theme*='border'][theme~='vertical']:not([theme~='gap'])) [part='group-field'] ::slotted(*:not(:first-of-type)) {
+:host([theme~='border'][theme~='vertical']:not([theme~='gap'])) [part='group-field'] ::slotted(*:not(:first-of-type)),
+:host([theme~='toggle'][theme~='vertical']:not([theme~='gap'])) [part='group-field'] ::slotted(*:not(:first-of-type)) {
     margin: -1px 0 0 0;
 }
 
@@ -65,4 +76,10 @@
     :host([theme~='gap']:not([theme~="vertical"])) [part='group-field'] {
         flex-direction: row;
     }
+}
+
+/* Theme: Small */
+
+:host([theme~="small"])::before {
+    height: var(--lumo-size-s);
 }
