--- a/frontend/themes/vaadin+/components/key-value-pairs.css
+++ b/frontend/themes/vaadin+/components/key-value-pairs.css
@@ -1,4 +1,4 @@
-dl[theme~="dividers"] > *:not(:last-child)::after {
+dl[theme~="dividers"] > *::after {
     border-bottom: 1px solid var(--lumo-contrast-10pct);
     content: "";
     inset: auto 0 0 0;
