--- a/frontend/themes/vaadin+/layout.css
+++ b/frontend/themes/vaadin+/layout.css
@@ -1,3 +1,25 @@
 .aspect-square {
   aspect-ratio: 1 / 1;
 }
+
+.col-span-full {
+  grid-column: 1 / -1;
+}
+
+@media (min-width: 640px) {
+  .sm\:grid {
+    display: grid;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:grid {
+    display: grid;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:grid {
+    display: grid;
+  }
+}
