TopNav (work-in-progress)

--- a/frontend/themes/vaadin+/styles.css
+++ b/frontend/themes/vaadin+/styles.css
@@ -11,3 +11,21 @@
 @import url('./main-layout.css');
 @import url('./position.css');
 @import url('./z-index.css');
+
+.header {
+    background-color: #ff0000;
+    color: #ffffff;
+}
+
+.navigation {
+    background-color: #ffff00;
+}
+
+.content {
+    background-color: #00ff00;
+}
+
+.footer {
+    background-color: #0000ff;
+    color: #ffffff;
+}
