--- a/frontend/themes/vaadin+/components/vaadin-side-nav-item.css
+++ b/frontend/themes/vaadin+/components/vaadin-side-nav-item.css
@@ -6,3 +6,7 @@ slot[name="children"] {
     padding: var(--vaadin-side-nav-child-padding, 0px);
     position: var(--vaadin-side-nav-child-position, static);
 }
+
+::part(children):empty {
+    display: none;
+}
