--- a/frontend/themes/vaadin+/components/vaadin-side-nav-item.css
+++ b/frontend/themes/vaadin+/components/vaadin-side-nav-item.css
@@ -1,4 +1,4 @@
-slot[name="children"] {
+[part="children"] {
     background-color: var(--vaadin-side-nav-child-background-color, transparent);
     border-radius: var(--vaadin-side-nav-child-border-radius, 0px);
     box-shadow: var(--vaadin-side-nav-child-box-shadow, none);
