--- a/frontend/themes/vaadin+/background.css
+++ b/frontend/themes/vaadin+/background.css
@@ -1,3 +1,9 @@
+.bg-tint-90 {
+  background-color: var(--lumo-tint-90pct);
+}
+
+/* Hover */
+
 .hover\:bg-contrast-5:hover {
   background-color: var(--lumo-contrast-5pct);
 }
