--- a/frontend/themes/vaadin+/typography.css
+++ b/frontend/themes/vaadin+/typography.css
@@ -1,3 +1,30 @@
-.no-underline, .no-underline:hover {
+/* Line clamp */
+
+[class*="line-clamp-"] {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+}
+
+.line-clamp-1 {
+  -webkit-line-clamp: 1;
+}
+
+.line-clamp-2 {
+  -webkit-line-clamp: 2;
+}
+
+.line-clamp-3 {
+  -webkit-line-clamp: 3;
+}
+
+.line-clamp-4 {
+  -webkit-line-clamp: 4;
+}
+
+/* Text decoration */
+
+.no-underline,
+.no-underline:hover {
   text-decoration-line: none;
 }
