--- a/frontend/themes/vaadin+/styles.css
+++ b/frontend/themes/vaadin+/styles.css
@@ -5,6 +5,7 @@
 @import url('./components/stepper.css');
 @import url('./background.css');
 @import url('./border.css');
+@import url('./filter.css');
 @import url('./layout.css');
 @import url('./main-layout.css');
 @import url('./transforms.css');
