--- a/frontend/themes/vaadin+/styles.css
+++ b/frontend/themes/vaadin+/styles.css
@@ -6,6 +6,7 @@
 @import url('./background.css');
 @import url('./border.css');
 @import url('./filter.css');
+@import url('./flexbox-grid.css');
 @import url('./layout.css');
 @import url('./main-layout.css');
 @import url('./transforms.css');
