--- a/frontend/themes/vaadin+/components/stepper.css
+++ b/frontend/themes/vaadin+/components/stepper.css
@@ -1,3 +1,5 @@
+/* Numbered steps */
+
 nav.stepper ul {
     counter-reset: step;
 }
@@ -6,20 +8,22 @@ nav.stepper li {
     counter-increment: step;
 }
 
-nav.stepper a {
-    text-decoration: none;
-}
-
 nav.stepper a > *:first-child:empty::before {
     content: counter(step);
 }
 
+/* Connector lines */
+
 nav.stepper li::before {
     background-color: var(--lumo-contrast-30pct);
     content: "";
-    inset: 0 auto 0 calc(var(--lumo-space-m) + (var(--lumo-size-m) / 2));
+    inset: 0 auto 0 calc(var(--lumo-space-s) + var(--lumo-size-m) / 2);
     position: absolute;
     width: 1px;
+}
+
+nav.stepper[theme~="small"] li::before {
+    inset-inline-start: calc(var(--lumo-space-s) + var(--lumo-size-xs) / 2);
 }
 
 nav.stepper li:first-child::before {
@@ -30,6 +34,15 @@ nav.stepper li:last-child::before {
     bottom: 50%;
 }
 
-nav.stepper li > * {
-    z-index: 0;
+@media (min-width: 1024px) {
+    nav.stepper[theme~="horizontal"] li::before {
+        height: 1px;
+        inset: 50% 0 auto calc(var(--lumo-size-m) + var(--lumo-space-m) + var(--lumo-space-m));
+        width: auto;
+    }
+
+    nav.stepper[theme~="horizontal"] li:last-child::before {
+        content: none;
+    }
 }
+
