ListItem refactored to support RouterLink

--- a/frontend/themes/vaadin+/layout.css
+++ b/frontend/themes/vaadin+/layout.css
@@ -28,6 +28,10 @@
   bottom: 100%;
 }
 
+.-end-s {
+  inset-inline-end: calc(var(--lumo-space-s) / -1);
+}
+
 .-end-full {
   inset-inline-end: -100%;
 }
